# luckydrive-cli-rust

./: Cargo.toml  Changes.md
.github/workflows/: release.yml
scripts/: PRE_BUILD.sh  windows-install.ps1
src/: commands.rs  config.rs  main.rs  spinner.rs  token.rs
src/commands/: login.rs  logout.rs  upload.rs
