[package]
name = "luckydrive-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = "3.6.1"
clap = { version = "4.5.54", features = ["derive"] }
dotenv = "0.15.0"
ffmpeg-sidecar = "2.4.0"
indicatif = "0.18.3"
keyring = { version = "3.6.3", features = ["windows-native", "sync-secret-service", "linux-native"] }
reqwest = { version = "0.13.1", features = ["blocking", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
